--- a/metaproject/pyproject.toml
+++ b/metaproject/pyproject.toml
@@ -6,6 +6,10 @@ authors = ["Luis Vásquez <luisv0909@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+dj-database-url = "^1.2.0"
+psycopg2-binary = "^2.9.5"
+whitenoise = {extras = ["brotli"], version = "^6.2.0"}
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
