--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dj-database-url = "^1.2.0"
 psycopg2-binary = "^2.9.5"
 whitenoise = {extras = ["brotli"], version = "^6.2.0"}
 gunicorn = "^20.1.0"
+djangorestframework = "^3.14.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
