--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,10 @@ description = ""
 authors = ["Luis Vásquez <luisv0909@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.7"
 dj-database-url = "^1.2.0"
 psycopg2-binary = "^2.9.5"
-whitenoise = {extras = ["brotli"], version = "^6.2.0"}
+whitenoise = "^6.2.0"
 gunicorn = "^20.1.0"
 djangorestframework = "^3.14.0"
 requests = "^2.28.1"
